fix footer height issue on mobile (change height to min-height)

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -85,7 +85,7 @@ footer {
 	position: absolute;
 	z-index: 99;
 	padding: 20px;
-	height: 150px;
+	min-height: 150px;
 	width: 100%;
 	background-color: orange;
 
